--- a/color_star.ipynb
+++ b/color_star.ipynb
@@ -2,58 +2,131 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "a520dc8a-856e-4c53-96bf-e3cb38e755fe",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter First Number :   2\n",
-      "Enter second Number :   5\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " the primes number between  2 , 5 is :<function primes_between at 0x0000026A7975A0C0>\n"
+     "ename": "Terminator",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTerminator\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m color(c)\n\u001b[0;32m     15\u001b[0m h\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.004\u001b[39m\n\u001b[1;32m---> 16\u001b[0m \u001b[43mfd\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     17\u001b[0m rt(\u001b[38;5;241m50\u001b[39m)\n\u001b[0;32m     18\u001b[0m rt(\u001b[38;5;241m40\u001b[39m)\n",
+      "File \u001b[1;32m<string>:5\u001b[0m, in \u001b[0;36mfd\u001b[1;34m(distance)\u001b[0m\n",
+      "\u001b[1;31mTerminator\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "# from turtle import *\n",
-    "# import colorsys\n",
-    "# tracer(2)\n",
-    "# pensize(2)\n",
-    "# h = 0.2\n",
-    "# bgcolor(\"black\")\n",
-    "# lt(80)\n",
-    "# fd(180)\n",
-    "# lt(180)\n",
-    "# lt(80)\n",
+    "from turtle import *\n",
+    "import colorsys\n",
+    "tracer(2)\n",
+    "pensize(2)\n",
+    "h = 0.2\n",
+    "bgcolor(\"black\")\n",
+    "lt(80)\n",
+    "fd(180)\n",
+    "lt(180)\n",
+    "lt(80)\n",
     "\n",
-    "# for i in range (330):\n",
-    "#     c=colorsys.hsv_to_rgb(h,1,1)\n",
-    "#     color(c)\n",
-    "#     h+=0.004\n",
-    "#     fd(i)\n",
-    "#     rt(50)\n",
-    "#     rt(40)\n",
-    "#     fd(500)\n",
-    "#     rt(120)\n",
-    "# done()\n",
+    "for i in range (330):\n",
+    "    c=colorsys.hsv_to_rgb(h,1,1)\n",
+    "    color(c)\n",
+    "    h+=0.004\n",
+    "    fd(i)\n",
+    "    rt(50)\n",
+    "    rt(40)\n",
+    "    fd(500)\n",
+    "    rt(120)\n",
+    "done()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "911fb635-8cab-4e5a-9293-6d3f1895257a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from turtle import *\n",
+    "import colorsys\n",
+    "tracer(4)\n",
+    "pensize(2)\n",
+    "h = 0.2\n",
+    "bgcolor(\"gray\")\n",
+    "lt(180)\n",
+    "lt(180)\n",
+    "lt(180)\n",
+    "\n",
+    "for i in range (330):\n",
+    "    c=colorsys.hsv_to_rgb(h,1,1)\n",
+    "    color(c)\n",
+    "    h+=0.004\n",
+    "    fd(i)\n",
+    "    rt(50)\n",
+    "    rt(40)\n",
+    "    rt(120)\n",
+    "done()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "dce04194-6a01-4ddc-a18a-c60855b77739",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from turtle import *\n",
+    "import colorsys\n",
+    "tracer(4)\n",
+    "pensize(2)\n",
+    "h = 0.2\n",
+    "bgcolor(\"purple\")\n",
+    "lt(180)\n",
+    "lt(180)\n",
+    "# lt(180)\n",
+    "\n",
+    "for i in range (330):\n",
+    "    c=colorsys.hsv_to_rgb(h,1,1)\n",
+    "    color(c)\n",
+    "    h+=0.004\n",
+    "    fd(i)\n",
+    "    rt(50)\n",
+    "    # rt(40)\n",
+    "    rt(120)\n",
+    "done()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7713248-f745-4b9d-9494-9d7101c03d9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from turtle import *\n",
+    "import colorsys\n",
+    "tracer(4)\n",
+    "pensize(2)\n",
+    "h = 0.2\n",
+    "bgcolor(\"blue\")\n",
+    "lt(180)\n",
+    "lt(180)\n",
+    "# lt(180)\n",
+    "\n",
+    "for i in range (330):\n",
+    "    c=colorsys.hsv_to_rgb(h,1,1)\n",
+    "    color(c)\n",
+    "    h+=0.004\n",
+    "    fd(i)\n",
+    "    rt(50)\n",
+    "    # rt(40)\n",
+    "    rt(120)\n",
+    "done()"
+   ]
   }
  ],
  "metadata": {
