--- a/SnakeImproved.ipynb
+++ b/SnakeImproved.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pygame 2.5.2 (SDL 2.28.3, Python 3.11.2)\n",
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.11.9)\n",
       "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
      ]
     }
@@ -19,71 +19,67 @@
     "import pygame\n",
     "import time\n",
     "import random\n",
-    " \n",
+    "\n",
     "pygame.init()\n",
-    " \n",
+    "\n",
     "white = (255, 255, 255)\n",
     "yellow = (255, 255, 102)\n",
     "black = (0, 0, 0)\n",
     "red = (213, 50, 80)\n",
     "green = (0, 255, 0)\n",
     "blue = (50, 153, 213)\n",
-    " \n",
+    "orange = (255, 165, 0)\n",
+    "\n",
     "dis_width = 600\n",
     "dis_height = 400\n",
-    " \n",
+    "\n",
     "dis = pygame.display.set_mode((dis_width, dis_height))\n",
-    "pygame.display.set_caption('Snake Game by Faradars')\n",
-    " \n",
+    "pygame.display.set_caption('Enhanced Snake Game')\n",
+    "\n",
     "clock = pygame.time.Clock()\n",
-    " \n",
+    "\n",
     "snake_block = 10\n",
-    "snake_speed = 15\n",
-    " \n",
+    "snake_speed = 10  \n",
+    "\n",
     "font_style = pygame.font.SysFont(\"bahnschrift\", 25)\n",
     "score_font = pygame.font.SysFont(\"comicsansms\", 35)\n",
-    " \n",
-    " \n",
+    "\n",
     "def Your_score(score):\n",
-    "    value = score_font.render(\"Your Score: \" + str(score), True, yellow)\n",
-    "    dis.blit(value, [0, 0])\n",
-    " \n",
-    " \n",
-    " \n",
+    "    value = score_font.render(f\"Score: {score}\", True, yellow)\n",
+    "    dis.blit(value, [10, 10])\n",
+    "\n",
     "def our_snake(snake_block, snake_list):\n",
     "    for x in snake_list:\n",
-    "        pygame.draw.rect(dis, black, [x[0], x[1], snake_block, snake_block])\n",
-    " \n",
-    " \n",
+    "        pygame.draw.rect(dis, green, [x[0], x[1], snake_block, snake_block])\n",
+    "\n",
     "def message(msg, color):\n",
     "    mesg = font_style.render(msg, True, color)\n",
     "    dis.blit(mesg, [dis_width / 6, dis_height / 3])\n",
-    " \n",
-    " \n",
+    "\n",
     "def gameLoop():\n",
     "    game_over = False\n",
     "    game_close = False\n",
-    " \n",
+    "\n",
     "    x1 = dis_width / 2\n",
     "    y1 = dis_height / 2\n",
-    " \n",
+    "\n",
     "    x1_change = 0\n",
     "    y1_change = 0\n",
-    " \n",
+    "\n",
     "    snake_List = []\n",
     "    Length_of_snake = 1\n",
-    " \n",
-    "    foodx = round(random.randrange(0, dis_width - snake_block) / 20.0) * 20.0\n",
-    "    foody = round(random.randrange(0, dis_height - snake_block) / 20.0) * 20.0\n",
-    " \n",
+    "\n",
+    "    foodx = round(random.randrange(0, dis_width - snake_block) / 10.0) * 10.0\n",
+    "    foody = round(random.randrange(0, dis_height - snake_block) / 10.0) * 10.0\n",
+    "\n",
     "    while not game_over:\n",
-    " \n",
-    "        while game_close == True:\n",
-    "            dis.fill(blue)\n",
-    "            message(\"You Lost! Press C-Play Again or Q-Quit\", red)\n",
+    "\n",
+    "        while game_close:\n",
+    "            dis.fill(orange)\n",
+    "            message(\"Game Over! Press C to Restart or Q to Quit\", red)\n",
     "            Your_score(Length_of_snake - 1)\n",
     "            pygame.display.update()\n",
-    " \n",
+    "\n",
     "            for event in pygame.event.get():\n",
     "                if event.type == pygame.KEYDOWN:\n",
     "                    if event.key == pygame.K_q:\n",
@@ -91,57 +87,59 @@
     "                        game_close = False\n",
     "                    if event.key == pygame.K_c:\n",
     "                        gameLoop()\n",
-    " \n",
+    "\n",
     "        for event in pygame.event.get():\n",
     "            if event.type == pygame.QUIT:\n",
     "                game_over = True\n",
     "            if event.type == pygame.KEYDOWN:\n",
-    "                if event.key == pygame.K_LEFT:\n",
+    "                if event.key == pygame.K_LEFT and x1_change == 0:\n",
     "                    x1_change = -snake_block\n",
     "                    y1_change = 0\n",
-    "                elif event.key == pygame.K_RIGHT:\n",
+    "                elif event.key == pygame.K_RIGHT and x1_change == 0:\n",
     "                    x1_change = snake_block\n",
     "                    y1_change = 0\n",
-    "                elif event.key == pygame.K_UP:\n",
+    "                elif event.key == pygame.K_UP and y1_change == 0:\n",
     "                    y1_change = -snake_block\n",
     "                    x1_change = 0\n",
-    "                elif event.key == pygame.K_DOWN:\n",
+    "                elif event.key == pygame.K_DOWN and y1_change == 0:\n",
     "                    y1_change = snake_block\n",
     "                    x1_change = 0\n",
-    " \n",
+    "\n",
     "        if x1 >= dis_width or x1 < 0 or y1 >= dis_height or y1 < 0:\n",
     "            game_close = True\n",
     "        x1 += x1_change\n",
     "        y1 += y1_change\n",
     "        dis.fill(blue)\n",
-    "        pygame.draw.rect(dis, red, [foodx, foody, snake_block, snake_block])\n",
-    "        snake_Head = []\n",
-    "        snake_Head.append(x1)\n",
-    "        snake_Head.append(y1)\n",
+    "\n",
+    "        pygame.draw.circle(dis, red, (int(foodx + snake_block / 2), int(foody + snake_block / 2)), snake_block // 2)\n",
+    "\n",
+    "        snake_Head = [x1, y1]\n",
     "        snake_List.append(snake_Head)\n",
     "        if len(snake_List) > Length_of_snake:\n",
     "            del snake_List[0]\n",
-    " \n",
+    "\n",
     "        for x in snake_List[:-1]:\n",
     "            if x == snake_Head:\n",
     "                game_close = True\n",
-    " \n",
+    "\n",
     "        our_snake(snake_block, snake_List)\n",
     "        Your_score(Length_of_snake - 1)\n",
-    " \n",
+    "\n",
     "        pygame.display.update()\n",
-    " \n",
+    "\n",
     "        if x1 == foodx and y1 == foody:\n",
-    "            foodx = round(random.randrange(0, dis_width - snake_block) / 20.0) * 20.0\n",
-    "            foody = round(random.randrange(0, dis_height - snake_block) / 20.0) * 20.0\n",
+    "            foodx = round(random.randrange(0, dis_width - snake_block) / 10.0) * 10.0\n",
+    "            foody = round(random.randrange(0, dis_height - snake_block) / 10.0) * 10.0\n",
     "            Length_of_snake += 1\n",
-    " \n",
+    "            global snake_speed\n",
+    "            snake_speed += 0.5\n",
+    "\n",
     "        clock.tick(snake_speed)\n",
-    " \n",
+    "\n",
     "    pygame.quit()\n",
     "    quit()\n",
-    " \n",
-    "gameLoop()"
+    "\n",
+    "gameLoop()\n"
    ]
   },
   {
@@ -169,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
